--- a/05.React/02.webpack-pokedex/package.json
+++ b/05.React/02.webpack-pokedex/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production",
+    "start:dev": "webpack-dev-server --no-client-overlay --mode development"
   },
   "keywords": [],
   "author": "",
