--- a/05.React/02.webpack-pokedex/package.json
+++ b/05.React/02.webpack-pokedex/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
     "autoprefixer": "^10.3.4",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
