--- a/06.Patterns/03.restful_api/package.json
+++ b/06.Patterns/03.restful_api/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "colors": "^1.4.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
