--- a/07.Backend/01.knex-api/package.json
+++ b/07.Backend/01.knex-api/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.14",
     "pg": "^8.7.1"
