--- a/07.Backend/01.knex-api/package.json
+++ b/07.Backend/01.knex-api/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js"
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "staging": "cross-env NODE_ENV=staging nodemon server.js",
+    "production": "cross-env NODE_ENV=production nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,8 @@
     "express": "^4.17.1",
     "knex": "^0.95.14",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
